<resources>
    <string name="app_name">IPM</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="permission_rationale" />
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="contacts">Contacts</string>
    <string name="about">About</string>
    <string name="support_example_com">support@example.com</string>
    <string name="information_about_the_application">Information about the application:</string>
    <string name="this_application_uses_information_send_by_users_and_their_names_to_post_this_pictures">This application uses information send by users and their names to post this pictures.</string>
    <string name="the_smart_s_light_project_consist_in_changing_street_lights_into_more_sofisticated_street_light_that_turns_on_when_detects_if_someone_is_near_to_help_reduce_light_pollution_and_return_natural_wildlife">The Smart S-light project consist in changing street lights into more sofisticated street light that turns on when detects if someone is near, to help reduce light pollution and return natural wildlife.</string>
    <string name="if_you_have_any_questions_contact_through_mail_to_this_contact">If you have any questions, contact through mail to this contact:</string>
</resources>