<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">


    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="204dp"
        android:text="@string/support_example_com"
        android:textColor="#00838F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="242dp"
        android:layout_height="20dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="101dp"
        android:text="@string/information_about_the_application"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="254dp"
        android:layout_height="57dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="102dp"
        android:text="@string/this_application_uses_information_send_by_users_and_their_names_to_post_this_pictures"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="255dp"
        android:layout_height="112dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="94dp"
        android:text="@string/the_smart_s_light_project_consist_in_changing_street_lights_into_more_sofisticated_street_light_that_turns_on_when_detects_if_someone_is_near_to_help_reduce_light_pollution_and_return_natural_wildlife"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="259dp"
        android:layout_height="43dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="89dp"
        android:text="@string/if_you_have_any_questions_contact_through_mail_to_this_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="200dp"
        android:text="@string/about"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>